<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/previous_text_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/previous"
        android:textAlignment="center"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorTextDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/position_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/colorTextLight"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/next_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/next"
        android:textAlignment="center"
        android:layout_weight="1"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorTextDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:gravity="center"/>

</LinearLayout>