<resources>
    <string name="app_name">Baking Time</string>
    <string name="error_message">An error has occurred. Please try again later.</string>

    <string name="url_recipes">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>

    <string name="ingredients_term">Recipe Ingredients</string>
    <string name="item_term">items</string>
    <string name="step_term">Recipe Step</string>

    <string name="previous">PREV</string>
    <string name="next">NEXT</string>
    <string name="add_widget">Add widget</string>
</resources>
